[gd_scene load_steps=3 format=3 uid="uid://edbe0ktmaocs"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Laboratory/Objects/back_wall_window.gd" id="1_uf4o6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5pw8x"]
size = Vector3(11.6511, 2.8, 6.36586)

[node name="BackWallWindow" type="Sprite3D"]
script = ExtResource("1_uf4o6")

[node name="MouseArea" type="Area3D" parent="."]

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="MouseArea"]
polygon = PackedVector2Array(5.85775, 4.58656, -5.86491, 4.71243, -5.84234, -3.50384, 5.68407, -3.61668)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.999999, 0, 1.87228e-12, 0, 0.999999, 0, -1.87228e-12, 0, 0.999999, 0.106519, -4.30766, 2.28122)
shape = SubResource("BoxShape3D_5pw8x")

[connection signal="mouse_entered" from="MouseArea" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_area_3d_mouse_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
